# risiparse

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  design.org  html_to_pdf.py  mypy.ini  requirements.txt  risiparse.py  risitas-links  setup.cfg  sites_selectors.py  tox.ini
.github/workflows/: risiparse.yml
risiparse/: html_to_pdf.py  risiparse.py  sites_selectors.py
risiparse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
risiparse/utils/: database.py  log.py  utils.py  utils_page_downloader.py  utils_posts.py
tests/e2e/: test_all_messages.py  test_all_posts.py  test_authors.py  test_clear_database.py  test_create_pdfs.py  test_debug.py  test_download_images.py  test_download_jvarchive.py  test_download_jvc.py  test_download_webarchive.py  test_resize_images.py
utils/: utils.py
