[metadata]
name = risiparse
version = 1.1.2
author = Vichelis
author_email = vichelis@prefecturedelapaz.com
description = A script to download risitas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vichelisdelapaz/risiparse
project_urls =
    Bug Tracker = https://github.com/vichelisdelapaz/risiparse/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop

[options]
packages = risiparse, risiparse.utils
python_requires = >=3.6
install_requires =
	requests
	BeautifulSoup4
	PyQt5
	PyQtWebEngine
	lxml
	colorama
	waybackpy

[options.entry_points]
console_scripts =
    risiparse = risiparse.risiparse:main
